@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-12T01:56:49Z",
+  "timestamp" : "2025-11-13T01:58:30Z",
   "count_outdated" : 1621,
   "uniques_outdated" : 1141,
-  "count" : 1623,
-  "uniques" : 1143,
+  "count" : 1624,
+  "uniques" : 1144,
   "clones" : [
     {
       "timestamp": "2025-10-31T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-11-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
