@@ -1,3 +1,12 @@
+2025-11-13T01:58:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19317982076 # 807
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 1141 1621 / 1143 1623
+* notice: next accum: outdated-unq outdated-all / unq all: 1141 1621 / 1144 1624
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-11-12]
+
 2025-11-12T01:56:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19283865327 # 806
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
